# TRPO

./: .gitignore  1.c  2.c  CMakeLists.txt  README.md  first.txt  my_gemm_double.cpp  my_gemm_float.cpp  run_tests.py  second.txt  test_gemm_openblas_double.cpp  test_gemm_openblas_float.cpp  thirt.txt
tests/: test_asum.py  test_axpy.py  test_copy.py  test_dot1.py  test_dot2.py  test_dotc.py  test_dotu.py  test_i_amax.py  test_nrm2.py  test_rot1.py  test_rot2.py  test_rotg.py  test_rotm.py  test_rotmg.py  test_scal.py  test_swap.py  test_utils.py
